add the invitation page with the option to allow or disable the refer system

--- a/graborders/src/App.css
+++ b/graborders/src/App.css
@@ -15,7 +15,26 @@
     margin: auto;
   }
 
+.spinner {
+  border: 3px solid rgba(255, 255, 255, 0.2);
+  /* White color with opacity */
+  border-top: 3px solid #ffffff;
+  /* White color */
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  animation: spin 1s linear infinite;
+}
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
   .auth__page {
     position: relative;
     background-image: url('/images/auth/bg.webp');
